0-eks/1-vpc.tf
# Create a VPC
resource "aws_vpc" "surek8svpc" {
  cidr_block = "10.0.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true
  
  tags = {
    Name = "sure-k8s-vpc"
    "kubernetes.io/cluster/sure-k8s-cluster" = "owned"
  }
}
